# bella-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  gen.py  keep_alive.py  main.py  memory_manager.py  pyproject.toml  railway.json  railway.toml  replit_zip_error_log.txt  requirements.txt
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/nix/: env.json
.github/workflows/: python-app.yml
.upm/: store.json
