[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.4.0",
    "flask>=3.1.0",
    "google-generativeai>=0.8.3",
    "langdetect>=1.0.9",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "speechrecognition>=3.12.0",
    "PyNaCl>=1.4.0",
    "waitress>=2.1.2",
]
